Added api functions to release script